Changing the header section style and adding the hero section

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,53 +1,41 @@
 .header {
-  padding: 1.375rem 0;
+  background-color: $color_white;
+  padding-top: 1.4375rem;
+  padding-bottom: 1.3125rem;
 
   &__container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-between
   }
 
-  &--main {
-    background-color: #fff;
-  }
-
-  &__nav {
-    margin-left: -112px;
+  &__contacts {
+    display: flex;
+    column-gap: 2.25rem;
   }
 }
 
 .nav {
+  margin-left: -6.875rem;
+
   &__list {
     display: flex;
-    align-items: center;
     column-gap: 2.5rem;
   }
 
   &__link {
-    font-size: 1rem;
     font-weight: 700;
     line-height: 160%;
     color: $color_gray-800;
   }
 }
 
-.header-contacts {
-  display: flex;
-  align-items: center;
-  column-gap: 2.25rem;
-
-  &__link {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-}
-
 .contacts-link {
+  display: flex;
+  flex-direction: column;
   background-repeat: no-repeat;
-  background-size: 2.5rem 2.5rem;
   background-position: left center;
-  padding-left: 3.375rem;
+  padding-left: 3.25rem;
 
   &__caption {
     font-size: .875rem;
@@ -63,11 +51,11 @@
     color: $color_gray-900;
   }
 
-  &--call {
-    background-image: url("@img/icons/iPhone.svg");
+  &--phone {
+    background-image: url('@img/icons/iPhone.svg');
   }
 
-  &--mail {
+  &--email {
     background-image: url('@img/icons/Chat.svg');
   }
 }
