--- a/src/scss/settings/_reset.scss
+++ b/src/scss/settings/_reset.scss
@@ -3,18 +3,16 @@
 *::after {
   margin: 0;
   padding: 0;
-  border: 0;
   box-sizing: border-box;
   font-size: 1rem;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 400;
   outline: none;
-  list-style: none;
   scroll-behavior: smooth;
 }
 
 html {
-  font-size: 1rem;
+  font-size: inherit;
   line-height: 1.15rem;
   -webkit-text-size-adjust: 100%;
 }
@@ -26,134 +24,32 @@ body {
   text-size-adjust: 100%;
 }
 
-main {
-  display: block;
+ol,
+ul {
+  list-style: none;
 }
 
-h1 {
-  font-size: 2rem;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25rem;
-}
-
-sup {
-  top: -0.5rem;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15rem;
-}
-
-button,
-input {
-  overflow: visible;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-textarea {
-  overflow: auto;
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type="search"] {
-  outline-offset: -2px;
-}
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
-
-details {
-  display: block;
-}
-
-summary {
-  display: list-item;
-}
-
-template {
-  display: none;
-}
-
-[hidden] {
-  display: none;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button {
-  cursor: pointer;
-
-  &::-moz-focus-inner {
-    padding: 0;
-    border: 0;
-  }
-}
-
-a,
-a:visited {
+a {
   text-decoration: none;
-  background-color: transparent;
 }
 
 img {
   vertical-align: top;
   width: 100%;
   border-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+span {
+  font-size: inherit;
+  font-weight: inherit;
+  text-transform: inherit;
 }
