--- a/src/scss/settings/_settings.scss
+++ b/src/scss/settings/_settings.scss
@@ -1,70 +1,5 @@
-// * Variables Start * \\
-$container: 78.75rem;
-$font_family1: 'Ubuntu';
-$font_family2: 'Lato';
-$color_gray-800: #424551;
-$color_gray-900: #1E212C;
-// * Variables End * \\
-
-// * Mixins Start * \\
-// Font Start \\
-@mixin font($font_name, $file_name, $weight, $style) {
-  @font-face {
-    font-family: $font_name;
-    font-display: swap;
-    src: url("../fonts/#{$file_name}.woff") format("woff"),
-    url("../fonts/#{$file_name}.woff2") format("woff2");
-    font-weight: #{$weight};
-    font-style: #{$style};
-  }
-}
-
-// Font End \\
-
-// Response Start \\
-@mixin response($flex, $min-width, $max-width) {
-  @if $flex {
-    flex: 1 1 math.div($min-width, $max-width) * 100%;
-  }
-
-  @else {
-    width: math.div($min-width, $max-width) * 100%;
-  }
-}
-
-// Response End \\
-
-// Breakpoint Start \\
-@mixin breakpoint($point) {
-  @if $point ==_1400 {
-    @media (max-width: 87.5em) {
-      @content;
-    }
-  }
-
-  @else if $point ==_1200 {
-    @media (max-width: 75em) {
-      @content;
-    }
-  }
-
-  @else if $point ==_992 {
-    @media (max-width: 62em) {
-      @content;
-    }
-  }
-
-  @else if $point ==_768 {
-    @media (max-width: 48em) {
-      @content;
-    }
-  }
-
-  @else if $point ==_576 {
-    @media (max-width: 36em) {
-      @content;
-    }
-  }
-}
-
-// Breakpoint End \\
+@import 'vars';
+@import 'mixins';
+@import 'normalize';
+@import 'reset';
+@import 'fonts';
