--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,12 @@
 @import "settings/settings";
-@import "settings/reset";
+@import "components/btn";
 
 .container {
   max-width: $container;
+  width: 100%;
   margin: 0 auto;
   padding: 0 0.9375rem;
 }
 
-@import 'header';
+@import "components/header";
+@import "components/hero";
