--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import "settings/settings";
+@import "components/title";
 @import "components/btn";
 
 .container {
@@ -10,3 +11,4 @@
 
 @import "components/header";
 @import "components/hero";
+@import "components/video";
