--- a/src/scss/components/_video.scss
+++ b/src/scss/components/_video.scss
@@ -1,9 +1,9 @@
 .video {
   padding-top: 7.5rem;
-  padding-bottom: calc(180 / 2) + px;
+  padding-bottom: 5.625rem;
 
   &__container {
-    margin-top: 60px;
+    margin-top: 3.75rem;
   }
 
   &__preolader {
