add request section and services

--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -11,6 +11,7 @@
   padding: 0 2.4375rem;
   border-radius: .25rem;
   cursor: pointer;
+  display: inline-block;
 
   &--transparent {
     background-color: transparent;
