--- a/src/scss/settings/_vars.scss
+++ b/src/scss/settings/_vars.scss
@@ -1,9 +1,11 @@
 $container: 78.75rem;
 $font_family1: 'Ubuntu';
 $font_family2: 'Lato';
+$color_gray-200: #F4F5F6;
+$color_gray-400: #D7DADD;
+$color_gray-600: #9A9CA5;
 $color_gray-700: #787A80;
 $color_gray-800: #424551;
 $color_gray-900: #1E212C;
 $color_white: #fff;
 $color_primary: #FF5A30;
-$color_gray-700: #787A80;
