--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -16,6 +16,7 @@
   }
 
   &__box {
+    position: relative;
     width: 285px;
     min-height: 285px;
     background-color: $color_white;
@@ -24,6 +25,23 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    transition: 0.3s;
+
+    &:hover {
+      background-color: rgba($color: #000000, $alpha: 0.5);
+    }
+
+    &:hover .services__title {
+      color: $color_white;
+    }
+
+    &:hover .services__icon {
+      fill: $color_white;
+    }
+  }
+
+  &__icon {
+    transition: 0.3s;
   }
 
   &__title {
@@ -32,5 +50,17 @@
     font-weight: 700;
     line-height: 150%;
     color: $color_gray-900;
+    transition: 1s;
+  }
+
+  &__bg {
+    position: absolute;
+    background-image: url('@img/bg/services-hover-bg.jpg');
+    background-repeat: no-repeat;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
 }
