add portfolio slider section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,3 +16,4 @@
 @import "components/values";
 @import "components/request";
 @import "components/services";
+@import "components/portfolio-slider";
