added three section
added three section: facts, recent-news and discuss

--- a/src/scss/settings/_vars.scss
+++ b/src/scss/settings/_vars.scss
@@ -9,3 +9,6 @@ $color_gray-800: #424551;
 $color_gray-900: #1E212C;
 $color_white: #fff;
 $color_primary: #FF5A30;
+$color_warning: #F89828;
+$color_info: #5A87FC;
+$color_success: #03CEA4;
