--- a/src/scss/components/_learn-more.scss
+++ b/src/scss/components/_learn-more.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   column-gap: 40px;
+  flex-wrap: wrap;
+  row-gap: 20px;
 
   &__title {
     font-size: 1.75rem;
