--- a/src/scss/components/_recent-news.scss
+++ b/src/scss/components/_recent-news.scss
@@ -6,6 +6,14 @@
     display: grid;
     grid-template-columns: 44.0625rem 30.9375rem;
     gap: 1.875rem;
+
+    @include breakpoint(_1260) {
+      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    }
+
+    @include breakpoint(_576) {
+      grid-template-columns: 1fr !important;
+    }
   }
 
   &__item {
@@ -40,6 +48,8 @@
     display: flex;
     column-gap: .75rem;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 10px;
   }
 
   &__txt {
