--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -14,6 +14,10 @@
   display: inline-block;
   transition: all .3s;
 
+  @include breakpoint(_576) {
+    width: 100%;
+  }
+
   &:hover {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .5);
   }
