--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -7,6 +7,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 50px;
   }
 
   &__head {
@@ -57,6 +59,11 @@
     margin-top: 1.5rem;
     display: flex;
     align-items: center;
+
+    @include breakpoint(_576) {
+      flex-direction: column;
+      row-gap: 20px;
+    }
   }
 
   &__input {
@@ -66,6 +73,10 @@
     background: rgba($color: $color_white, $alpha: 0.12);
     color: rgba($color: $color_white, $alpha: 0.6);
     border-radius: .25rem 0 0 .25rem;
+
+    @include breakpoint(_576) {
+      width: 100%;
+    }
   }
 
   &__btn {
@@ -80,6 +91,8 @@
     margin-top: 3.125rem;
     display: flex;
     column-gap: 7.8125rem;
+    flex-wrap: wrap;
+    row-gap: 30px;
   }
 
   &__nav-title {
@@ -114,6 +127,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 50px;
   }
 
   &__top {
