--- a/src/scss/components/_title.scss
+++ b/src/scss/components/_title.scss
@@ -1,8 +1,13 @@
 .title {
-  font-size: 2.875rem;
+  font-size: 46px;
   font-weight: 700;
   line-height: 130%;
   color: $color_gray-900;
+
+  @include breakpoint(_576) {
+
+    font-size: 30px;
+  }
 
   &--center {
     text-align: center;
