--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -10,6 +10,36 @@
     height: 100vh;
   }
 
+  &__breadcrumbs {
+    margin-bottom: 40px;
+    display: flex;
+    column-gap: 8px;
+    font-size: 14px;
+    color: $color_gray-600;
+
+    &--black {
+      color: $color_gray-800;
+      font-size: 14px;
+    }
+  }
+
+  &__page {
+    position: relative;
+    top: -92px;
+    left: 0;
+    min-height: 600px;
+    height: auto;
+    width: 100%;
+    padding-bottom: 0;
+  }
+
+  &--services {
+    background-image: url('@img/bg/services-hero-bg.png');
+    background-size: auto;
+    background-position: right;
+    background-color: $color_gray-200;
+  }
+
   &__slider {
     width: 100%;
     height: 100%;
@@ -21,7 +51,15 @@
   }
 
   &__container {
-    max-width: 36.0625rem;
+    max-width: 577px;
+
+    &--page {
+      max-width: 500px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+
+    }
 
     @include breakpoint(_1400) {
       padding-left: 70px;
@@ -38,13 +76,16 @@
   }
 
   &__title {
-    font-size: 50px;
+    font-size: 72px;
     font-weight: 700;
     line-height: 130%;
     letter-spacing: .0625rem;
     text-transform: uppercase;
     color: $color_white;
-    margin-top: -1.5rem;
+
+    &--black {
+      color: $color_gray-900;
+    }
 
     span {
       color: $color_primary;
@@ -61,6 +102,10 @@
     line-height: 150%;
     color: $color_white;
     margin-top: 1.5rem;
+
+    &--gray {
+      color: $color_gray-700;
+    }
   }
 
   &__btn-group {
