finished the page Services

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,5 +41,6 @@
 @import "components/testimonials";
 @import "components/facts";
 @import "components/recent-news";
+@import "components/services-info";
 @import "components/discuss";
 @import "components/footer";
