--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -31,6 +31,10 @@
     height: auto;
     width: 100%;
     padding-bottom: 0;
+
+    @include breakpoint(_576) {
+      height: auto;
+    }
   }
 
   &--services {
@@ -59,6 +63,11 @@
       top: 50%;
       transform: translateY(-50%);
 
+      @include breakpoint(_1400) {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        max-width: 500px !important;
+      }
     }
 
     @include breakpoint(_1400) {
@@ -105,6 +114,12 @@
 
     &--gray {
       color: $color_gray-700;
+    }
+
+    &--black {
+      @include breakpoint(_1200) {
+        color: $color_gray-900;
+      }
     }
   }
 
