--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@
 
 @import "components/header";
 @import "components/hero";
+@import "components/offer";
 @import "components/video";
 @import "components/values";
 @import "components/request";
