added steps section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@
 @import "components/header";
 @import "components/hero";
 @import "components/offer";
+@import "components/steps";
 @import "components/video";
 @import "components/values";
 @import "components/request";
