--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,6 +4,7 @@
   padding-top: 1.4375rem;
   padding-bottom: 1.3125rem;
   z-index: 2;
+  transition: all .3s linear;
 
   &--transparent {
     background-color: transparent;
