added benefits and prising sections. Finished page

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -20,6 +20,11 @@
     &--black {
       color: $color_gray-800;
       font-size: 14px;
+      transition: .3s linear;
+
+      &:hover {
+        color: $color_primary;
+      }
     }
   }
 
