--- a/src/scss/components/_offer.scss
+++ b/src/scss/components/_offer.scss
@@ -24,6 +24,10 @@
   flex-direction: column;
   row-gap: 24px;
 
+  @include breakpoint(_768) {
+    margin-top: 30px;
+  }
+
   &__content {
     overflow: hidden;
 
@@ -85,6 +89,10 @@
 
     @include breakpoint(_1200) {
       max-width: 100%;
+    }
+
+    @include breakpoint(_768) {
+      font-size: 24px;
     }
 
     @include breakpoint(_576) {
