--- a/src/scss/components/_partners.scss
+++ b/src/scss/components/_partners.scss
@@ -2,6 +2,10 @@
   padding-top: 5rem;
   margin-top: 7.5rem;
 
+  @include breakpoint(_992) {
+    margin-top: 50px;
+  }
+
   &__content {
     display: flex;
     flex-wrap: wrap;
