--- a/src/scss/components/_portfolio-slider.scss
+++ b/src/scss/components/_portfolio-slider.scss
@@ -12,7 +12,7 @@
 
   &__slide {
     overflow: hidden;
-    max-height: 26.25rem;
+    max-height: 444px;
 
     @include breakpoint(_768) {
       max-height: 100%;
@@ -57,7 +57,7 @@
     color: $color_primary;
     border-color: $color_primary;
     font-size: .875rem;
-    margin-top: 1.5rem;
+    margin-top: 34px;
     line-height: 2.75rem;
     letter-spacing: .0313rem;
 
