finished page modern cottage

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,8 @@
 @import "components/values";
 @import "components/request";
 @import "components/services";
+@import "components/hero-slider";
+@import "components/constructive";
 @import "components/cards";
 @import "components/portfolio-slider";
 @import "components/partners";
