--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,6 +47,7 @@
 @import "components/services";
 @import "components/hero-slider";
 @import "components/constructive";
+@import "components/statistics";
 @import "components/cards";
 @import "components/portfolio-slider";
 @import "components/partners";
