added map section and fix other sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -48,6 +48,7 @@
 @import "components/hero-slider";
 @import "components/constructive";
 @import "components/statistics";
+@import "components/map";
 @import "components/cards";
 @import "components/portfolio-slider";
 @import "components/partners";
