--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,7 @@
 @import "components/constructive";
 @import "components/statistics";
 @import "components/map";
+@import "components/ceo";
 @import "components/cards";
 @import "components/portfolio-slider";
 @import "components/partners";
