--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,6 +50,7 @@
 @import "components/statistics";
 @import "components/map";
 @import "components/ceo";
+@import "components/team";
 @import "components/cards";
 @import "components/portfolio-slider";
 @import "components/partners";
