--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,6 +47,7 @@
 @import "components/steps";
 @import "components/benefits";
 @import "components/pricing";
+@import "components/single-post";
 @import "components/video";
 @import "components/values";
 @import "components/request";
@@ -64,6 +65,7 @@
 @import "components/portfolio-slider";
 @import "components/partners";
 @import "components/testimonials";
+@import "components/news";
 @import "components/facts";
 @import "components/recent-news";
 @import "components/services-info";
