--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -82,6 +82,11 @@
     background-color: $color_gray-200;
   }
 
+  &--single-post {
+    background-image: linear-gradient($color_gray-200, $color_gray-200) !important;
+    min-height: 700px;
+  }
+
   &--portfolio {
     background-image: url('@img/bg/portfolio-hero-bg.png');
     background-size: auto;
@@ -105,6 +110,10 @@
 
   &__container {
     max-width: 577px;
+
+    &-single {
+      max-width: 1230px !important;
+    }
 
     &--page {
       max-width: 500px;
@@ -140,6 +149,11 @@
     letter-spacing: .0625rem;
     text-transform: uppercase;
     color: $color_white;
+
+    &--single {
+      text-transform: capitalize;
+      font-size: 64px;
+    }
 
     &--black {
       color: $color_gray-900;
@@ -238,6 +252,41 @@
       width: 1.125rem;
       height: .6875rem;
     }
+  }
+
+  &__meta-box {
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    row-gap: 30px;
+  }
+
+  &__meta {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+
+  &__divider {
+    width: 1px;
+    height: 12px;
+    background-color: $color_gray-700;
+  }
+
+  &__meta-item {
+    display: flex;
+    align-items: center;
+    color: $color_gray-700;
+    font-weight: 400;
+    line-height: 160%;
+    gap: 8px;
+  }
+
+  &__social-list {
+    display: flex;
+    gap: 12px;
   }
 }
 
