--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,10 +51,12 @@
 @import "components/video";
 @import "components/values";
 @import "components/request";
+@import "components/contact-us";
 @import "components/services";
 @import "components/hero-slider";
 @import "components/constructive";
 @import "components/statistics";
+@import "components/our-offices";
 @import "components/map";
 @import "components/ceo";
 @import "components/history";
